Working Kann Max

--- a/ca1000t.html
+++ b/ca1000t.html
@@ -1,9 +1,14 @@
-
 <!DOCTYPE html>
 <html>
-<head><title>CA1000T Playbook</title></head>
+<head>
+  <title>CA1000T Playbook</title>
+  <link rel="stylesheet" href="style.css">
+</head>
 <body>
-<h1>CA1000T Playbook</h1>
-<p>Coming soon...</p>
+<img src="assets/CA1000T.jpg" alt="Astell&Kern CA1000T" class="product-image">
+<div class="card">
+  <h1>CA1000T Playbook</h1>
+  <p>Coming soon...</p>
+</div>
 </body>
 </html>
