--- a/index.html
+++ b/index.html
@@ -1,14 +1,24 @@
-
 <!DOCTYPE html>
 <html>
-<head><title>Audiophile Playbook</title></head>
+<head><title>Audiophile Playbook</title>
+  <link rel="stylesheet" href="style.css">
+</head>
 <body>
 <h1>Audiophile Playbook by Christian Molnar</h1>
 <p><em>Created in collaboration with Orionis Cantus ("Song of Orion") (ChatGPT, OpenAI)</em></p>
-<ul>
-  <li><a href="kann_max.html">KANN Max Playbook</a></li>
-  <li><a href="ca1000t.html">CA1000T Playbook</a></li>
-  <li><a href="story.html">Story of the Collaboration</a></li>
-</ul>
+<div class="card">
+  <img src="assets/Astell_Kern_KANN_Max.jpg" alt="Astell&Kern KANN Max" class="product-image">
+  <h2>KANN Max Playbook</h2>
+  <a class="btn" href="kann_max.html">View KANN Max Reference</a>
+</div>
+<div class="card">
+  <img src="assets/CA1000T.jpg" alt="Astell&Kern CA1000T" class="product-image">
+  <h2>CA1000T Playbook</h2>
+  <a class="btn" href="ca1000t.html">View CA1000T Reference</a>
+</div>
+<div class="card">
+  <h2>Story of the Collaboration</h2>
+  <a class="btn" href="story.html">Read the Story</a>
+</div>
 </body>
 </html>
