--- a/story.html
+++ b/story.html
@@ -1,7 +1,8 @@
-
 <!DOCTYPE html>
 <html>
-<head><title>The Story</title></head>
+<head><title>The Story</title>
+  <link rel="stylesheet" href="style.css">
+</head>
 <body>
 <h1>The Story of the Audiophile Playbook</h1>
 <p>This project was a collaboration between Christian Molnar and Orionis Cantus (ChatGPT, OpenAI).</p>
