--- a/kann_max.html
+++ b/kann_max.html
@@ -6,7 +6,11 @@
 </head>
 <body>
 <div style="display: flex; flex-direction: column; align-items: center; margin-top: 2rem;">
-  <h1 style="text-align: center; margin-bottom: 0.7rem;">Astell & Kern KANN MAX Playbook</h1>
+  <h1 style="text-align: center; margin-bottom: 0.2rem;">Astell & Kern KANN MAX</h1>
+  <div style="text-align: center; color: #181614; font-family: var(--font-heading); font-size: 2.2rem; font-weight: 400; margin-bottom: 0.7rem;">Headphone Playbook</div>
+  <div style="text-align: center; margin: 1.2rem 0 1.8rem 0; font-size: 1.18em; color: #3e2c18; font-family: var(--font-main); font-weight: 400;">
+    I created this page to share my favorite EQ tuning ideas for Warm, Max Bass, and Relaxed curve signatures on the KANN MAX, paired with my headphones and IEMs. This project was made in partnership with Orionis Cantus (OpenAI, ChatGPT)—a very helpful (and sometimes a bit misleading!) AI agent. I hope these tunings inspire your own listening adventures!
+  </div>
   <div class="description-box">
     <p style="margin-bottom:0; font-size:1.1em; color:#3e2c18; text-align:center;">
       The Astell&Kern KANN Max is A&K's flagship digital audio player (DAP) renowned for its powerful amplification, pristine sound quality, and versatile output options. Designed for audiophiles who demand uncompromising performance, the KANN Max delivers exceptional clarity, dynamic range, and detail, making it ideal for driving even the most demanding headphones. Its compact form factor, robust build, and advanced DAC/amp architecture ensure a premium listening experience whether at home or on the go.
