Latest changes.  New colors.

--- a/kann_max.html
+++ b/kann_max.html
@@ -398,7 +398,7 @@ window.addEventListener('DOMContentLoaded', () => {
 <!-- Headphone Blurb: Focal Celestee -->
 <div class="hp-info-box">
   <div class="hp-info-flex">
-    <img src="assets/CA1000T.jpg" alt="Focal Celestee Headphones" class="hp-info-img" />
+    <img src="assets/celestee.jpg" alt="Focal Celestee Headphones" class="hp-info-img" />
     <div class="hp-blurb-content">
       <div class="hp-blurb-desc">The Celestee is a closed-back dynamic headphone with a punchy, lively sound and luxurious build. Its tight bass and sparkling highs make it great for modern music, and its isolation is perfect for on-the-go or office use.</div>
       <ul class="hp-blurb-specs">
@@ -433,7 +433,7 @@ window.addEventListener('DOMContentLoaded', () => {
 <!-- Headphone Blurb: Sennheiser HD800 -->
 <div class="hp-info-box">
   <div class="hp-info-flex">
-    <img src="assets/LCD-2.jpg" alt="Sennheiser HD800 Headphones" class="hp-info-img" />
+    <img src="assets/HD800.jpg" alt="Sennheiser HD800 Headphones" class="hp-info-img" />
     <div class="hp-blurb-content">
       <div class="hp-blurb-desc">Renowned for its immense soundstage and detail, the HD800 is a reference open-back headphone. It’s ideal for classical, acoustic, and critical listening, revealing every nuance in your music.</div>
       <ul class="hp-blurb-specs">
@@ -564,7 +564,7 @@ window.addEventListener('DOMContentLoaded', () => {
 <!-- Headphone Blurb: Sennheiser HD599 -->
 <div class="hp-info-box">
   <div class="hp-info-flex">
-    <img src="assets/LCD-2.jpg" alt="Sennheiser HD599 Headphones" class="hp-info-img" />
+    <img src="assets/HD599.jpg" alt="Sennheiser HD599 Headphones" class="hp-info-img" />
     <div class="hp-blurb-content">
       <div class="hp-blurb-desc">A fantastic entry-level open-back, the HD599 offers a warm, comfortable sound signature and lightweight fit. It’s great for long listening sessions and pairs well with a wide range of music.</div>
       <ul class="hp-blurb-specs">
@@ -695,7 +695,7 @@ window.addEventListener('DOMContentLoaded', () => {
 <!-- Headphone Blurb: Hifiman Audivina -->
 <div class="hp-info-box">
   <div class="hp-info-flex">
-    <img src="assets/LCD-2.jpg" alt="Hifiman Audivina Headphones" class="hp-info-img" />
+    <img src="assets/Audivina.jpg" alt="Hifiman Audivina Headphones" class="hp-info-img" />
     <div class="hp-blurb-content">
       <div class="hp-blurb-desc">A closed-back planar magnetic headphone with a unique resonance chamber, the Audivina delivers fast, detailed sound and strong bass. It’s excellent for both home and portable use, with great isolation.</div>
       <ul class="hp-blurb-specs">
@@ -826,7 +826,7 @@ window.addEventListener('DOMContentLoaded', () => {
 <!-- Headphone Blurb: Hifiman Ananda Nano -->
 <div class="hp-info-box">
   <div class="hp-info-flex">
-    <img src="assets/LCD-2.jpg" alt="Hifiman Ananda Nano Headphones" class="hp-info-img" />
+    <img src="assets/ananda_nano.jpg" alt="Hifiman Ananda Nano Headphones" class="hp-info-img" />
     <div class="hp-blurb-content">
       <div class="hp-blurb-desc">The Ananda Nano features an ultra-thin diaphragm for lightning-fast response and airy, open sound. It’s a superb all-rounder for those who want detail, comfort, and a wide soundstage.</div>
       <ul class="hp-blurb-specs">
