--- a/kann_max.html
+++ b/kann_max.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>KANN Max Playbook</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style.css?v=20250430">
 </head>
 <body>
 <div style="display: flex; flex-direction: column; align-items: center; margin-top: 2rem;">
