--- a/ca1000t.html
+++ b/ca1000t.html
@@ -5,6 +5,12 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+<nav class="main-nav">
+  <a href="index.html">Home</a>
+  <a href="kann_max.html">KANN Max Playbook</a>
+  <a href="ca1000t.html">CA1000T Playbook</a>
+  <a href="story.html">Story</a>
+</nav>
 <img src="assets/CA1000T.jpg" alt="Astell&Kern CA1000T" class="product-image">
 <div class="card">
   <h1>CA1000T Playbook</h1>
