--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+<nav class="main-nav">
+  <a href="index.html">Home</a>
+  <a href="kann_max.html">KANN Max Playbook</a>
+  <a href="ca1000t.html">CA1000T Playbook</a>
+  <a href="story.html">Story</a>
+</nav>
 <h1>Audiophile Playbook by Christian Molnar</h1>
 <p><em>Created in collaboration with Orionis Cantus ("Song of Orion") (ChatGPT, OpenAI)</em></p>
 <div class="card">
