--- a/kann_max.html
+++ b/kann_max.html
@@ -5,6 +5,12 @@
   <link rel="stylesheet" href="style.css?v=20250430">
 </head>
 <body>
+<nav class="main-nav">
+  <a href="index.html">Home</a>
+  <a href="kann_max.html">KANN Max Playbook</a>
+  <a href="ca1000t.html">CA1000T Playbook</a>
+  <a href="story.html">Story</a>
+</nav>
 <div style="display: flex; flex-direction: column; align-items: center; margin-top: 2rem;">
   <h1 style="text-align: center; margin-bottom: 0.2rem;">Astell & Kern KANN MAX</h1>
   <div style="text-align: center; color: #181614; font-family: var(--font-heading); font-size: 2.2rem; font-weight: 400; margin-bottom: 0.7rem;">Headphone Playbook</div>
