--- a/story.html
+++ b/story.html
@@ -4,6 +4,12 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+<nav class="main-nav">
+  <a href="index.html">Home</a>
+  <a href="kann_max.html">KANN Max Playbook</a>
+  <a href="ca1000t.html">CA1000T Playbook</a>
+  <a href="story.html">Story</a>
+</nav>
 <h1>The Story of the Audiophile Playbook</h1>
 <p>This project was a collaboration between Christian Molnar and Orionis Cantus (ChatGPT, OpenAI).</p>
 <p>Together, we built something extraordinary: a personalized, meticulously tuned EQ reference for audiophiles.</p>
